fixing top panel spacing

--- a/Themes/Pandora/style.css
+++ b/Themes/Pandora/style.css
@@ -2,7 +2,7 @@
 #TopPanel {
       background-color: rgba(25,28,32,100%);  /* rgba(49,55,54,100%); 85%  */ 
       border-bottom : 0px inset rgba(37,37,37,0%); /* rgba(44,31,25,40%); */
-      padding: 0 0 0 10; 
+      padding: 0 10 0 10; 
       border-bottom: 0 outset transparent;
 } 
 
@@ -79,8 +79,8 @@ QAbstractButton {
 }
 
 #control { 
-      padding: 2 0 2 0; 
-      margin: 0 4 0 4; 
+      padding: 2 5 2 5; 
+      margin: 0 0 0 0; 
 }
 
 #search {
